# As per https://github.com/pypa/setuptools/blob/main/docs/userguide/quickstart.rst
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tomltest"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}